--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,7 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\scripts\UDPtransport.cs" />
+     <Compile Include="Assets\scripts\UDPclient.cs" />
  <Reference Include="UnityEditor.StandardEvents">
  <HintPath>/Users/eliaskassellraymond/Documents/GitHub/Manhattan-Hololens/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
  </Reference>
