--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -572,19 +572,19 @@
     <Compile Include="Assets\HoloToolkit\UX\Scripts\UICollection.cs" />
     <Compile Include="Assets\HoloToolkit\UX\Scripts\UsabilityScaler.cs" />
     <Compile Include="Assets\HoloToolkit\UX\Scripts\UsabilityUtilities.cs" />
-    <Compile Include="Assets\Scripts\HoloInteractive.cs" />
     <Compile Include="Assets\Scripts\Minigames\Minigame.cs" />
     <Compile Include="Assets\Scripts\Minigames\MinigameManager.cs" />
     <Compile Include="Assets\Scripts\Minigames\Stone.cs" />
     <Compile Include="Assets\Scripts\Minigames\Wood.cs" />
-    <Compile Include="Assets\Scripts\MyDirectionIndicator.cs" />
     <Compile Include="Assets\Scripts\Server\BlueprintServer.cs" />
     <Compile Include="Assets\Scripts\Server\LocalIP.cs" />
     <Compile Include="Assets\Scripts\Server\ServerState.cs" />
     <Compile Include="Assets\Scripts\Server\SocketListener.cs" />
     <Compile Include="Assets\Scripts\Server\Spawnable.cs" />
-    <Compile Include="Assets\Scripts\TextManager.cs" />
-    <Compile Include="Assets\Scripts\TrackCamera.cs" />
+    <Compile Include="Assets\Scripts\Utils\HoloInteractive.cs" />
+    <Compile Include="Assets\Scripts\Utils\MyDirectionIndicator.cs" />
+    <Compile Include="Assets\Scripts\Utils\TextManager.cs" />
+    <Compile Include="Assets\Scripts\Utils\TrackCamera.cs" />
     <None Include="Assets\HoloToolkit\Utilities\Scripts\GLTF\Shaders\GLTFConstant.cginc" />
     <None Include="Assets\HoloToolkit\Common\Shaders\Obsolete\UnlitConfigurable.shader" />
     <None Include="Assets\HoloToolkit\UX\Shaders\HUXButtonShader.shader" />
