--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -590,6 +590,7 @@
     <Compile Include="Assets\Scripts\Server\ServerState.cs" />
     <Compile Include="Assets\Scripts\Server\SocketListener.cs" />
     <Compile Include="Assets\Scripts\Server\Spawnable.cs" />
+    <Compile Include="Assets\Scripts\Utils\FaceTowardsCamera.cs" />
     <Compile Include="Assets\Scripts\Utils\GestureInfoManager.cs" />
     <Compile Include="Assets\Scripts\Utils\HoloInteractive.cs" />
     <Compile Include="Assets\Scripts\Utils\MyAnimation.cs" />
